# backplaned

./: .env.example  .gitignore  README.md  config_ui.py  helper.py  pyproject.toml  router.py  start.config.example  start.sh
agents/core_personal_agent/: agent.py  config.default.json  config.example  config.json
agents/llm_agent/: agent.py  config.example  config.json
agents/md_converter/: agent.py  config.default.json  config.example  config.json
agents/memory_agent/: agent.py  config.default.json  config.example  memory_store.py
agents/web_agent/: agent.py  config.default.json  config.example  config.json  tools.py
agents_external/channel_agent/: .env.example  config.default.json  config.example  main.py
agents_external/channel_agent/static/: index.html
agents_external/coding_agent/: .env.example  SPEC.md  agent.py  config.default.json  config.example  config.json  config.py  docker-compose.yml  start.sh  tools.py  web_ui.py
agents_external/coding_agent/static/: index.html
agents_external/cron_agent/: .env.example  AGENT.md  agent.py  config.default.json  config.example  config.py  db.py  scheduler.py  tools.py  web_ui.py
agents_external/cron_agent/static/: index.html
agents_external/kb_agent/: .env.example  agent.py  config.default.json  config.example  config.py  db.py  tools.py  web_ui.py
agents_external/kb_agent/static/: index.html
agents_external/mcp_agent/: .env.example  agent_info_builder.py  config.default.json  config.example  main.py  mcp_manager.py
agents_external/mcp_agent/static/: app.js  index.html  style.css
agents_external/mcp_server/: .env.example  config.default.json  config.example  main.py  mcp_bridge.py
agents_external/mcp_server/data/: config.json
agents_external/mcp_server/static/: app.js  index.html
agents_external/reminder_agent/: .env.example  AGENT.md  agent.py  checker.py  config.default.json  config.example  config.py  db.py  oauth.py  rrule_util.py  sync.py  tools.py  web_ui.py
agents_external/reminder_agent/static/: index.html
agents_external/web_admin/: .env.example  main.py
agents_external/web_admin/static/: app.js  index.html  style.css
agents_external/webapp_agent/: .env.example  agent.py  config.default.json  config.example  config.py
agents_external/webapp_agent/static/: app.js  index.html  style.css
backplaned/: __init__.py
bp_protocol/: __init__.py  frames.py  types.py
bp_router/: __init__.py  __main__.py  app.py  correlation.py  delivery.py  dispatch.py  embedded.py  settings.py  state.py  tasks.py  visibility.py  ws_hub.py
bp_router/acl/: __init__.py  evaluator.py  rules.py
bp_router/api/: __init__.py  admin.py  auth.py  files.py  health.py  llm.py  onboard.py  sessions.py  tasks.py
bp_router/db/: connection.py  models.py  queries.py
bp_router/db/migrations/: env.py
bp_router/db/migrations/versions/: 0001_initial_schema.py
bp_router/llm/: __init__.py  service.py
bp_router/llm/providers/: base.py  gemini.py
bp_router/observability/: __init__.py  logging.py  metrics.py  tracing.py
bp_router/security/: __init__.py  jwt.py  passwords.py  secrets.py
bp_router/storage/: __init__.py  base.py  local.py  s3.py
bp_sdk/: __init__.py  agent.py  context.py  correlation.py  dispatch.py  errors.py  files.py  llm.py  onboarding.py  peers.py  progress.py  settings.py  testing.py  tools.py
bp_sdk/transport/: __init__.py  base.py  inproc.py  ws.py
docker/: .env.example  Dockerfile.coding  Dockerfile.router  docker-compose.yml
docs/: acl.md  agent-development.md  agents.md  contributing.md  router.md  security.md
docs/design/: observability.md  overview.md
docs/design/router/: state.md
docs/design/sdk/: services.md
docs/router/: protocol.md  storage.md
docs/sdk/: core.md
tests/: conftest.py  test_smoke_e2e.py
